; ModuleID = '/home/carl/AnghaBench/linux/drivers/virtio/extr_virtio.c_virtio_add_status.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/virtio/extr_virtio.c_virtio_add_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.virtio_device = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.virtio_device*)*, i32 (%struct.virtio_device*, i32)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @virtio_add_status(%struct.virtio_device* %0, i32 %1) #0 {
  %3 = alloca %struct.virtio_device*, align 8
  %4 = alloca i32, align 4
  store %struct.virtio_device* %0, %struct.virtio_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = call i32 (...) @might_sleep()
  %6 = load %struct.virtio_device*, %struct.virtio_device** %3, align 8
  %7 = getelementptr inbounds %struct.virtio_device, %struct.virtio_device* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 1
  %10 = load i32 (%struct.virtio_device*, i32)*, i32 (%struct.virtio_device*, i32)** %9, align 8
  %11 = load %struct.virtio_device*, %struct.virtio_device** %3, align 8
  %12 = load %struct.virtio_device*, %struct.virtio_device** %3, align 8
  %13 = getelementptr inbounds %struct.virtio_device, %struct.virtio_device* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32 (%struct.virtio_device*)*, i32 (%struct.virtio_device*)** %15, align 8
  %17 = load %struct.virtio_device*, %struct.virtio_device** %3, align 8
  %18 = call i32 %16(%struct.virtio_device* %17)
  %19 = load i32, i32* %4, align 4
  %20 = or i32 %18, %19
  %21 = call i32 %10(%struct.virtio_device* %11, i32 %20)
  ret void
}

declare dso_local i32 @might_sleep(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
